[package]
name = "hyp_1"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1.9.0"
pretty_env_logger = "0.5"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
